--- a/sea.ipynb
+++ b/sea.ipynb
@@ -182,7 +182,8 @@
    },
    "outputs": [],
    "source": [
-    "WEIGHT_INIT = tf.keras.initializers.RandomNormal(mean=0.0,stddev=0.2)\n",
+    "WEIGHT_INIT = tf.keras.initializers.RandomNormal(mean=0.0,stddev=0.2)\n\n",
+    "#Generator model\n",
     "def make_generator_model():\n",
     "    model = tf.keras.Sequential()\n",
     "    \n",
@@ -327,6 +328,7 @@
    },
    "outputs": [],
    "source": [
+    "#Discriminator model\n",
     "def make_discriminator_model():\n",
     "    model = tf.keras.Sequential()\n",
     "    model.add(layers.Conv2D(64, (5, 5), strides=(2, 2), padding='same',\n",
