--- a/sea.ipynb
+++ b/sea.ipynb
@@ -182,7 +182,7 @@
    },
    "outputs": [],
    "source": [
-    "WEIGHT_INIT = tf.keras.initializers.RandomNormal(mean=0.0,stddev=0.2)\n\n",
+    "init_weight = tf.keras.initializers.RandomNormal(mean=0.0,stddev=0.2)\n\n",
     "#Generator model\n",
     "def make_generator_model():\n",
     "    model = tf.keras.Sequential()\n",
@@ -194,27 +194,27 @@
     "    print(model.output_shape)\n",
     "    assert model.output_shape == (None,16,28,512)\n",
     "\n",
-    "    model.add(layers.Conv2DTranspose(256,(5,5),strides=(2,2),use_bias=False,padding=\"same\",kernel_initializer=WEIGHT_INIT))\n",
+    "    model.add(layers.Conv2DTranspose(256,(5,5),strides=(2,2),use_bias=False,padding=\"same\",kernel_initializer=init_weight))\n",
     "    model.add(layers.BatchNormalization())\n",
     "    model.add(layers.LeakyReLU())\n",
     "    assert model.output_shape == (None,32,56,256)\n",
     "    \n",
-    "    model.add(layers.Conv2DTranspose(128,(5,5),strides=(2,2),use_bias=False,padding=\"same\",kernel_initializer=WEIGHT_INIT))\n",
+    "    model.add(layers.Conv2DTranspose(128,(5,5),strides=(2,2),use_bias=False,padding=\"same\",kernel_initializer=init_weight))\n",
     "    model.add(layers.BatchNormalization())\n",
     "    model.add(layers.LeakyReLU())\n",
     "    assert model.output_shape == (None,64,112,128)\n",
     "    \n",
-    "    model.add(layers.Conv2DTranspose(64,(5,5),strides=(2,2),use_bias=False,padding=\"same\",kernel_initializer=WEIGHT_INIT))\n",
+    "    model.add(layers.Conv2DTranspose(64,(5,5),strides=(2,2),use_bias=False,padding=\"same\",kernel_initializer=init_weight))\n",
     "    model.add(layers.BatchNormalization())\n",
     "    model.add(layers.LeakyReLU())\n",
     "    assert model.output_shape == (None,128,224,64)\n",
     "    \n",
-    "    model.add(layers.Conv2DTranspose(64,(5,5),strides=(2,2),use_bias=False,padding=\"same\",kernel_initializer=WEIGHT_INIT))\n",
+    "    model.add(layers.Conv2DTranspose(64,(5,5),strides=(2,2),use_bias=False,padding=\"same\",kernel_initializer=init_weight))\n",
     "    model.add(layers.BatchNormalization())\n",
     "    model.add(layers.LeakyReLU())\n",
     "    assert model.output_shape == (None,256,448,64)\n",
     "    \n",
-    "    model.add(layers.Conv2DTranspose(3,(5,5),strides=(2,2),use_bias=False,padding=\"same\",kernel_initializer=WEIGHT_INIT,\n",
+    "    model.add(layers.Conv2DTranspose(3,(5,5),strides=(2,2),use_bias=False,padding=\"same\",kernel_initializer=init_weight,\n",
     "                                     activation=\"tanh\"))\n",
     "    \n",
     "    assert model.output_shape == (None,512,896,3)\n",
